driver: pca9570: added IO Exapnder support for PCA9570

--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -1,4 +1,4 @@
-# generic gpio support: platform drivers, dedicated expander chips, etc
+j generic gpio support: platform drivers, dedicated expander chips, etc
 
 ccflags-$(CONFIG_DEBUG_GPIO)	+= -DDEBUG
 
