--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -540,6 +540,7 @@ CONFIG_ROCKCHIP_REMOTECTL_PWM=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_RK8XX_PWRKEY=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_GPIO_PCA953X=y
 CONFIG_INPUT_GPIO=y
 CONFIG_SERIO_RAW=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
